# switchresx-control

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
src/switchresx_control/: __init__.py  display_set.py  osascript.py
src/switchresx_control/scripts/: switchresx_control.py
src/switchresx_control/utils/: argparse.py
tests/switchresx_control/: test_null.py
