[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "switchresx_control"
description = "Control utility for SwitchResX"
readme = "README.md"
requires-python = ">= 3.11, < 4"
authors = [{name = "Andy Gimblett", email = "andy@barefootcode.com"}]
dependencies = [
    "argparse-formatter >= 1.4, < 2",
    "more-itertools >= 10.1.0, < 10.2",
    "pydantic >= 2.5.2, < 2.6",
    "requests >= 2.31.0, < 2.32",
    "rich >= 13.7.0, < 13.8",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "switchresx_control.__version__"}

[project.optional-dependencies]
dev = [
    "black >= 23.12.0, < 24",
    "build >= 1.0.3, < 1.1",
    "bumpversion >= 0.6.0, < 0.7",
    "coverage >= 7.3.3, < 7.4",
    "flake8 >= 6.1.0, < 6.2",
    "mypy >= 1.7.1, < 1.8",
    "pre-commit >= 3.6.0, < 3.7",
    "pytest >= 7.4.3, < 7.5",
    "pytest-cov >= 4.1.0, < 5",
    "types-requests >= 2.31.0, < 2.32",
]

[project.scripts]
switchresx-control = "switchresx_control.scripts.switchresx_control:main"


[tool.coverage.run]
branch = true
source_pkgs = ["switchresx_control"]

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.html]
skip_covered = false
skip_empty = true


[tool.isort]
profile = "black"
lines_after_imports = 2
skip_gitignore = true


[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
warn_untyped_fields = true


[tool.pytest.ini_options]
addopts = """
    --doctest-modules
    --cov
    --cov-config=pyproject.toml
    --cov-report term
    --cov-report html
    --no-cov-on-fail
"""
xfail_strict = true
